# delete-cli

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.py
delete/: __init__.py  __meta__.py  cli.py  logging.py
docs/: getting_started.rst  index.rst
docs/source/: conf.py  configuration.rst  getting_started.rst  index.rst  manpage.rst
man/man1/: delete.1
src/delete/: __init__.py  logging.py
