[tool.poetry]
name = "delete-cli"
version = "2.0.0"
description = "A simple, cross-platform, command-line move-to-trash."
readme = "README.rst"
license = "MIT"
homepage = "https://delete-cli.readthedocs.io"
documentation = "https://delete-cli.readthedocs.io"
repository = "https://github.com/glentner/delete-cli"
authors = [
    "Geoffrey Lentner <glentner@purdue.edu>"
]
keywords = ["command-line", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "delete", from = "src"}]

[tool.poetry.scripts]
del = "delete:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
cmdkit = "2.7.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-sitemap = "^2.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.2"
sphinxext-opengraph = "^0.9.1"
sphinx-toolbox = "^3.5.0"
pydata-sphinx-theme = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
